# functional_core_imperative_shell

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  tasks.py
.github/workflows/: docs.yaml  linting.yaml  tests.yaml
data/gold/example_domain/: metrics.csv  scores.csv
data/silver/: customers.csv  transactions.csv
docs/: README.md  gen_api_sphinx.py  index.html
docs/_build/html/: .buildinfo  api_style_guide.html  examples.html  genindex.html  getting_started.html  index.html  io_formats.html  objects.inv  py-modindex.html  scheduling.html  search.html  searchindex.js  user_guide.html
docs/_build/html/.doctrees/: api_style_guide.doctree  environment.pickle  examples.doctree  getting_started.doctree  index.doctree  io_formats.doctree  scheduling.doctree  user_guide.doctree
docs/_build/html/_sources/: examples.md.txt  getting_started.md.txt  index.md.txt  io_formats.md.txt  scheduling.md.txt  user_guide.md.txt
docs/_build/html/api/: _module_list.html  index.html
docs/source/: api_style_guide.md  conf.py  configuration.md  examples.md  getting_started.md  index.md  io_formats.md  scheduling.md  user_guide.md
docs/source/_templates/autosummary/: class.rst  function.rst  module.rst  package.rst
docs/source/api/: _module_list.rst
docs/source/api/_generated/: data_handling.core.errors.rst  data_handling.core.io.rst  data_handling.core.logging.rst  data_handling.core.rst  data_handling.domains.example_domain.pipeline.rst  data_handling.main.rst  data_handling.schema.rst  data_handling.schema.types.rst
docs/source/stylesheets/: extra.css
hooks/: commit-msg.sh  pre-merge-commit.sh  pre-push.sh
outputs/2026-02-14/07-13-40/.hydra/: hydra.yaml
outputs/2026-02-14/07-13-57/.hydra/: config.yaml  hydra.yaml
outputs/2026-02-14/07-14-14/.hydra/: hydra.yaml
outputs/2026-02-14/07-15-35/.hydra/: hydra.yaml
outputs/2026-02-14/07-17-57/.hydra/: hydra.yaml
outputs/2026-02-14/07-21-36/.hydra/: config.yaml  hydra.yaml  overrides.yaml
src/data_handling.egg-info/: PKG-INFO  SOURCES.txt
src/insert_package_name/: __init__.py  api.py  cli.py  create_domain.py  gui.py  main.py  scheduler_main.py
src/insert_package_name.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/insert_package_name/configs/: __init__.py  config.yaml
src/insert_package_name/core/: __init__.py  errors.py  io.py  logging.py  orchestrator.py  scheduler.py  validation.py
src/insert_package_name/domains/: __init__.py
src/insert_package_name/schema/: __init__.py  config_models.py  data_contracts.py  types.py
src/insert_package_name/templates/: index.html
src/insert_package_name/utils/: __init__.py  logging.py
tests/: __init__.py  conftest.py  test_io.py
tests/e2e/: test_main_e2e.py
tests/integration/: test_api_integration.py  test_cli_integration.py
tests/integration/core/: test_io_integration.py
tests/unit/: test_api.py  test_cli.py  test_create_domain.py  test_gui.py  test_imports.py  test_main.py  test_scheduler.py  test_scheduler_main.py
tests/unit/core/: test_errors.py  test_io_unit.py  test_logging.py  test_orchestrator.py  test_validation.py
tests/unit/schema/: test_data_contracts.py  test_schema_models.py  test_types.py
tests/unit/utils/: test_logging_setup.py
(+165 files in other folders)
